[package]
name = "covid19-my-tui"
version = "0.1.0"
authors = ["Harvey <ahlee2326@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.17"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2", features = ["macros"] }
tui = { version = "0.9", default-features = false, features = ["crossterm"] }
